--- a/addons/my_module/views/vehicle_views.xml
+++ b/addons/my_module/views/vehicle_views.xml
@@ -1,41 +1,18 @@
 <odoo>
-    <record id="view_vehicle_form" model="ir.ui.view">
-        <field name="name">vehicle.form</field>
-        <field name="model">vehicle.model</field>
-        <field name="arch" type="xml">
-            <form string="Vehicle">
-                <sheet>
-                    <group>
-                        <group>
-                            <field name="name"/>
-                            <field name="car_status"/>
-                            <field name="make"/>
-                            <field name="model"/>
-                            <field name="year"/>
-                            <field name="plate_letters"/>
-                            <field name="plate_numbers"/>
-                            <field name="color"/>
-                            <field name="license_plates"/>
-                            <field name="photo"/>
-                        </group>
-                        <group>
-                            <field name="replacement_original_car"/>
-                            <field name="date_of_first_receive"/>
-                            <field name="last_action"/>
-                            <field name="contract_type"/>
-                            <field name="replacement_for"/>
-                            <field name="added_by"/>
-                            <field name="type"/>
-                            <field name="own_car_plate"/>
-                            <field name="own_car_make"/>
-                            <field name="own_car_model"/>
-                            <field name="own_car_registration"/>
-                            <field name="passport_attachment"/>
-                            <field name="courier_id"/>
-                        </group>
-                    </group>
-                </sheet>
-            </form>
+    <record id="view_vehicle_tree" model="my_module.vehicle">
+        <tree string="Vehicles">
+            <field name="name"/>
+            <field name="capacity"/>
+        </tree>
+    </record>
+
+    <record id="action_vehicle" model="ir.actions.act_window">
+        <field name="name">Vehicles</field>
+        <field name="res.model" strip="true,form" type="string">
+            <text name="vehicle">Vehicle</text>
+            <theme id="view_vehicle_theme">
+                <trip strip="name"/>
+            </theme>
         </field>
     </record>
-</odoo>
+</odo>
